# ThunderNanoServices

./: CMakeLists.txt  README.md  disable_all_plugins.patch
Bluetooth/: BluetoothControl.h  CMakeLists.txt
Commander/: Commander.cpp
Compositor/: CMakeLists.txt  Compositor.cpp
Compositor/lib/: CMakeLists.txt
Compositor/lib/Nexus/: CMakeLists.txt  Nexus.cpp
Compositor/lib/Nexus/Client/: Implementation.cpp
Compositor/lib/Nexus/Compositor/: Nexus.cpp
Compositor/lib/Nexus/NexusServer/: NexusServer.cpp
Compositor/lib/NexusServer/: CMakeLists.txt  NexusServer.cpp  NexusServer.h
Compositor/lib/RPI/: RPI.cpp
Compositor/lib/Wayland/Compositor/: CMakeLists.txt  Wayland.cpp
Compositor/lib/nxserver/: CMakeLists.txt  IPlatform.h  NexusServerImplementation.cpp
DIALServer/: CMakeLists.txt  DIALServer.config
DisplaySettings/: CMakeLists.txt
DsgccClient/: DsgccClient.cpp
IOConnector/: GPIO.cpp  IOConnector.cpp
JSONRPCExamplePlugin/: JSONRPCExamplePlugin.cpp  JSONRPCExamplePlugin.h
LocationSync/: LocationService.cpp
Monitor/: Monitor.h
NetworkControl/: NetworkControl.h
OpenCDMi/: FrameworkRPC.cpp  OCDM.cpp  OpenCDMi.vcxproj
Power/: CMakeLists.txt  Power.cpp
RemoteControl/: GreenPeak.cpp  IRRemote.cpp  LinuxDevice.cpp  RemoteAdministrator.h  RemoteControl.cpp
RtspClient/: RtspClient.cpp
Snapshot/Device/: CMakeLists.txt
Spark/: Spark.cpp  SparkImplementation.cpp
Streamer/: Streamer.cpp
TestController/: TestController.cpp
TestUtility/: TestUtility.cpp
TimeSync/: NTPClient.cpp  TimeSync.cpp  TimeSyncJsonRpc.cpp
VideoPlaybackChecker/: CMakeLists.txt  Module.h  VideoPlaybackChecker.config  VideoPlaybackChecker.cpp  VideoPlaybackChecker.h  VideoPlaybackCheckerJsonRpc.cpp  VideoPlaybackCheckerPlugin.json  VideoPlaybackCheckerPlugin.md
VideoPlaybackChecker/Implementation/NexusSVP/: CMakeLists.txt  Module.h  VideoPlaybackCheckerImpl.cpp  bpiff.c  piff_parser.c  piff_parser.h  prdy30_svp.cpp  prdy30_svp.h
WebKitBrowser/: CMakeLists.txt  WebKitBrowser.cpp
WebKitBrowser/InjectedBundle/: main.cpp
WebServer/: WebServer.cpp
WifiControl/: CMakeLists.txt  Controller.cpp  Controller.h  WifiControl.cpp  WifiControl.h  WifiControlJsonRpc.cpp
WifiControl/doc/: WPE - API - WifiControl.docx
cmake/: FindSystemd.cmake  FindWPEWebKit.cmake
tests/JSONRPCPlugin/: JSONRPCPlugin.cpp  JSONRPCPlugin.h
tests/OutOfProcessPlugin/: OutOfProcessPlugin.cpp
