set(compositor_artefact compositorplugin)

option(WPEFRAMEWORK_PLUGIN_COMPOSITOR_NXSERVER "Include a nxserver. [ON, OFF]." ON)

if ("${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION}" STREQUAL "None" OR
    "${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION}" STREQUAL "OFF")
    message(FATAL_ERROR "WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION not correctly set: ${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION}")
endif()

if ("${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION}" STREQUAL "Nexus" OR WPEFRAMEWORK_PLUGIN_COMPOSITOR_NXSERVER)
    add_subdirectory(nxserver)
endif()

add_subdirectory (${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION})
